--- a/modals/shopDetails/bazi.html
+++ b/modals/shopDetails/bazi.html
@@ -3,29 +3,27 @@
     <span class="close">&times;</span>
     <h2>Charakterystyka Urodzeniowa BaZi</h2>
     <p class="dom-paragraph">
-      Poznaj swoją unikalną mapę energetyczną –
-      <strong>Charakterystyka Urodzeniowa BaZi</strong>
-    </p>
-    <p class="dom-paragraph">
-      BaZi, czyli Cztery Filary Przeznaczenia, to starożytna chińska metoda
-      analizy osobistego kodu energetycznego na podstawie daty i godziny
-      urodzenia. Dzięki BaZi poznasz swoje naturalne talenty, potencjał, a także
-      wyzwania, które mogą się pojawić na Twojej drodze życiowej.
+      Nasza konsultacja w zakresie czytania BaZi zapewnia kompleksową analizę
+      Twojej osobowości oraz wskazówki, jak poprawić samopoczucie i unikać
+      życiowych trudności. Odczyt ośmiu znaków BaZi polega na stworzeniu wykresu
+      bazującego na tzw. "Czterech filarach przeznaczenia". Taka interpretacja
+      pozwala z większą jasnością i celowością stawiać czoła życiowym wyzwaniom,
+      oferując głęboki wgląd w Twoje przeznaczenie.
     </p>
 
-    <h2 class="dom-subtitle">Co zyskasz dzięki analizie BaZi?</h2>
+    <h2 class="dom-subtitle">Korzyści analizy BaZi</h2>
     <ul class="dom-list">
-      <li>Szczegółowy opis Twojej osobowości i wrodzonych cech charakteru.</li>
       <li>
-        Zrozumienie mechanizmów Twojej energii, które wpływają na zdrowie,
-        relacje i finanse.
+        Zrozumienie własnego wykresu BaZi pozwala przewidywać nadchodzące
+        możliwości i wyzwania.
       </li>
       <li>
-        Wskazówki, jak najlepiej wykorzystać swoje atuty i łagodzić trudności.
+        Ta wiedza wspiera podejmowanie świadomych decyzji, prowadząc do bardziej
+        satysfakcjonującego życia. Dzięki BaZi możesz łatwiej dostrzegać okazje
+        i unikać potencjalnych pułapek.
       </li>
       <li>
-        Podpowiedzi dotyczące odpowiednich dla Ciebie zawodów, stylu życia oraz
-        momentów sprzyjających ważnym decyzjom.
+        Nasza analiza pomoże Ci obrać drogę prowadzącą do szczęścia i sukcesu.
       </li>
     </ul>
 
@@ -39,9 +37,16 @@
         kariery czy relacji.
       </li>
       <li>
-        Dla tych, którzy chcą świadomie kreować swoje życie, korzystając z
-        mądrości BaZi.
+        Dla wielu znajdujących się na rozdrożu i niepewnych kolejnych kroków –
+        zarówno w życiu zawodowym, jak i osobistym.
       </li>
+    </ul>
+    <h2 class="dom-subtitle">Co otrzymasz w ramach usługi?</h2>
+    <ul class="dom-list">
+      <li>Indywidualna interpretacja wykresu BaZi (4 filary przeznaczenia)</li>
+      <li>Analiza osobowości, mocnych/słabych stron, elementu dnia</li>
+      <li>Prognoza na nadchodzący rok / okres (np. 10-letni słup)</li>
+      <li>Pisemne opracowanie</li>
     </ul>
   </div>
 </div>
