--- a/modals/shopDetails/dom.html
+++ b/modals/shopDetails/dom.html
@@ -3,58 +3,57 @@
     <span class="close">&times;</span>
     <h2>FengShui dla Domu lub mieszkania</h2>
     <p class="dom-paragraph">
-      Zadbaj o harmonię, energię i pomyślność w swoim domu – z pomocą
-      sprawdzonej analizy Feng Shui!
-    </p>
-    <p class="dom-paragraph">
-      Nasza usługa analizy Feng Shui z uwzględnieniem
-      <strong>Rocznych Latających Gwiazd</strong> pomoże Ci odkryć, które rejony
-      Twojego domu lub mieszkania wspierają zdrowie, dobrobyt i relacje, a które
-      mogą przyciągać trudności, konflikty lub stagnację –
-      <em>w konkretnym roku</em>.
+      Nasza usługa pomaga w zaprojektowaniu nowej lub udoskonaleniu istniejącej
+      przestrzeni życiowej, wspierając wzrost osobisty oraz poprawiając różne
+      aspekty życia, takie jak dobrobyt, relacje, samopoczucie i przyciąganie
+      pozytywnej energii.
     </p>
 
     <h2 class="dom-subtitle">Co otrzymasz w ramach usługi?</h2>
     <ul class="dom-list">
       <li>
-        Indywidualną analizę energetyczną Twojego domu lub mieszkania na
-        podstawie układu Rocznych Latających Gwiazd.
+        <strong> Krok 1. Konsultacja wstępna</strong><br />
+        Ustalenie potrzeb, omówienie celów i założeń analizy w oparciu o plany
+        domu lub konkretnych obszarów nieruchomości, które będą analizowane.
+        Zrozumienie stylu życia i preferencji mieszkańców.
       </li>
       <li>
-        Wskazanie <strong>stref pozytywnych</strong> i
-        <strong>negatywnych</strong> na dany rok wraz z praktycznymi zaleceniami
-        (np. gdzie warto spędzać czas, które rejony aktywować, a których
-        unikać).
+        <strong> Krok 2. Wstępna ocena</strong><br />
+        Azaliza przesłanych materiałów. Sprawdzenie zgodności kierunków wewnątrz
+        i na zewnątrz. To stanowi podstawę całego procesu ulepszania FengShui.
       </li>
       <li>
-        Porady dotyczące rozmieszczenia mebli, kolorystyki i ewentualnych
-        środków zaradczych (np. talizmany, elementy dekoracyjne).
+        <strong> Krok 3. Kompleksowy raport rekomendacji</strong><br />
+        W ciągu 14 dni roboczych po ocenie, następuje wyjaśnienie zaleceń
+        FengShui, które są niezbędne w celu poprawy energetycznej badanej
+        przestrzeni. Raport w formie elektronicznej zawierać będzie konkretne
+        rozwiązania wspierające realizację wyznaczonych celów takich jak:
+        <ul>
+          <li>
+            odpowiednie wykorzystanie i rozplanowanie przestrzeni mające na celu
+            poprawę harmonii i spełnienia
+          </li>
+          <li>
+            doradztwo w zakresie zmiany ustawienia mebli i wyposażenia w celu
+            poprawy przepływu energii i wsparcia pożądanych celów każdego
+            obszaru
+          </li>
+        </ul>
       </li>
-      <li>Możliwość zadania pytań i konsultacji online (opcjonalnie).</li>
     </ul>
 
-    <h2 class="dom-subtitle">Dla kogo jest ta usługa?</h2>
-    <ul class="dom-list">
-      <li>
-        Dla osób, które chcą w pełni wykorzystać
-        <strong>energię przestrzeni</strong> w danym roku.
-      </li>
-      <li>
-        Dla tych, którzy planują <strong>remont, przeprowadzkę</strong> lub
-        ważne zmiany życiowe.
-      </li>
-      <li>
-        Dla każdego, kto chce poczuć się
-        <strong>bezpieczniej i bardziej wspierająco</strong> w swoim otoczeniu.
-      </li>
+    <h2 class="dom-subtitle">Informacje wymagane do konsultacji</h2>
+    <ul class="dom-infoList">
+      <li>rzut lokalu z oznaczeniem północy (N) i rokiem budowy</li>
+      <li>daty, godziny i miejsca urodzenia wszystkich domowników</li>
+      <li>zdjęcia wnętrz i otoczenia nieruchomości</li>
     </ul>
 
     <div class="dom-highlight">
       <p>
-        <strong>Feng Shui</strong> to nie magia – to świadome zarządzanie
-        energią otoczenia. Dzięki naszej analizie zyskasz wiedzę, jak najlepiej
-        zorganizować swoją przestrzeń w zgodzie z cyklami natury i
-        energetycznymi wzorcami.
+        <strong>Feng Shui</strong> to starożytna sztuka harmonizowania
+        przestrzeni, badająca relacje między człowiekiem, otoczeniem i siłami
+        kosmosu.
       </p>
     </div>
   </div>
