--- a/modals/shopDetails/qimen.html
+++ b/modals/shopDetails/qimen.html
@@ -1,42 +1,60 @@
 <div id="modal-qimen" class="modal hidden">
   <div class="modal-content">
     <span class="close">&times;</span>
-    <h2>Analiza Qi Men Dun Jia</h2>
+    <h2>Strategiczna Analiza Qi Men Dun Jia</h2>
     <p class="dom-paragraph">
-      Poznaj niezwykłe możliwości <strong>Qi Men Dun Jia</strong> – sztuki
-      strategicznego wykorzystania energii!
-    </p>
-    <p class="dom-paragraph">
-      Qi Men Dun Jia to zaawansowana chińska metoda prognostyczna i
-      strategiczna, która pozwala odkryć najlepsze momenty i sposoby działania,
-      aby podejmować trafne decyzje w życiu, biznesie i relacjach. Dzięki naszej
-      analizie Qi Men Dun Jia zyskasz przewagę i większą pewność w planowaniu
-      ważnych kroków.
+      Konsultacja w zakresie Qi Men Dun Jia to zaawansowane narzędzie analizy
+      energetycznej, które pozwala odkryć najlepszy moment i kierunek działania
+      w różnych aspektach życia. Qi Men Dun Jia, znane jako „Sztuka Ukrytych
+      Wrót”, opiera się na skomplikowanym systemie czasu, przestrzeni i energii.
+      Umożliwia podejmowanie trafnych decyzji w oparciu o precyzyjną mapę
+      energetyczną chwili, pomagając w nawigowaniu przez złożone sytuacje
+      życiowe i biznesowe.
     </p>
 
-    <h2 class="dom-subtitle">Co zyskasz dzięki analizie Qi Men Dun Jia?</h2>
+    <h2 class="dom-subtitle">Korzyści analizy Qi Men Dun Jia</h2>
     <ul class="dom-list">
       <li>
-        Precyzyjne wskazówki dotyczące optymalnego czasu na działania i decyzje.
+        Uzyskujesz strategiczne wskazówki dotyczące najlepszego czasu na
+        podjęcie ważnych decyzji.
       </li>
-      <li>Zrozumienie energii otoczenia i własnego potencjału.</li>
       <li>
-        Porady wspierające rozwój kariery, inwestycji i relacji osobistych.
+        Pomaga znaleźć optymalne rozwiązania w sytuacjach zawodowych, osobistych
+        lub biznesowych.
       </li>
-      <li>Wskazówki, jak unikać przeszkód i maksymalizować szanse sukcesu.</li>
+      <li>
+        Umożliwia precyzyjne przewidywanie potencjalnych rezultatów i unikanie
+        ryzyka.
+      </li>
+      <li>
+        Wspiera planowanie działań w harmonii z otaczającą energią czasu i
+        przestrzeni.
+      </li>
     </ul>
 
     <h2 class="dom-subtitle">Dla kogo jest ta usługa?</h2>
     <ul class="dom-list">
-      <li>Dla osób, które chcą podejmować świadome i strategiczne decyzje.</li>
       <li>
-        Dla przedsiębiorców, menedżerów i wszystkich, którzy planują ważne
-        działania biznesowe lub życiowe.
+        Dla osób stojących przed ważnymi decyzjami – osobistymi lub zawodowymi.
       </li>
       <li>
-        Dla tych, którzy pragną wykorzystać czas i energię w najbardziej
-        efektywny sposób.
+        Dla przedsiębiorców, liderów i menedżerów chcących podejmować działania
+        w najlepszym możliwym momencie.
       </li>
+      <li>
+        Dla każdego, kto pragnie głębszego zrozumienia ukrytych wpływów energii
+        oraz skutecznego planowania przyszłości.
+      </li>
+    </ul>
+    <h2 class="dom-subtitle">Co otrzymasz w ramach usługi?</h2>
+    <ul class="dom-list">
+      <li>
+        Ustawienie wykresu Qi Men na konkretny moment (decyzja, wybór daty,
+        działanie)
+      </li>
+      <li>Analiza energii chwili, kierunku działania, ukrytych wpływów</li>
+      <li>Strategiczne wskazówki (tak/nie, kiedy działać, jak działać)</li>
+      <li>Pisemne opracowanie</li>
     </ul>
   </div>
 </div>
