--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </div>
       </section>
     </div>
-    <footer class="custom-footer">
+    <!-- <footer class="custom-footer">
       <div class="footer-left">
         <img src="./images/logo.png" alt="White Lotus Logo" class="logo" />
       </div>
@@ -147,7 +147,7 @@
           <button class="form-submit" type="submit">Wyślij</button>
         </form>
       </div>
-    </footer>
+    </footer> -->
 
     <div id="modals-container"></div>
     <script src="scripts/fengshui.js"></script>
