--- a/modals/shop.html
+++ b/modals/shop.html
@@ -6,17 +6,31 @@
     <div class="product-list">
       <div
         class="product"
-        data-id="1"
-        data-name="FengShui dla Domu lub mieszkania"
+        data-id="1a"
+        data-name="FengShui dla Domu lub mieszkania (do 70 m²)"
         data-price="899"
       >
         <div class="product-name">
-          <h3>FengShui dla Domu lub mieszkania</h3>
-          <a href="#" class="more-link" data-modal-id="dom"> więcej </a>
+          <h3>FengShui dla Domu lub mieszkania (do 70 m²)</h3>
+          <a href="#" class="more-link" data-modal-id="dom70">więcej</a>
           <p>Cena: 899 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
       </div>
+      <div
+        class="product"
+        data-id="1b"
+        data-name="FengShui dla Domu lub mieszkania (powyżej 70 m²)"
+        data-price="1299"
+      >
+        <div class="product-name">
+          <h3>FengShui dla Domu lub mieszkania (powyżej 70 m²)</h3>
+          <a href="#" class="more-link" data-modal-id="dom70plus">więcej</a>
+          <p>Cena: 1299 zł</p>
+        </div>
+        <button class="add-to-cart">Dodaj do koszyka</button>
+      </div>
+
       <div
         class="product"
         data-id="2"
