--- a/modals/shop.html
+++ b/modals/shop.html
@@ -12,7 +12,7 @@
       >
         <div class="product-name">
           <h3>FengShui dla Domu lub mieszkania (do 70 m²)</h3>
-          <a href="#" class="more-link" data-modal-id="dom70">więcej</a>
+          <a href="#" class="more-link" data-modal-id="dom">więcej</a>
           <p>Cena: 899 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
@@ -25,7 +25,7 @@
       >
         <div class="product-name">
           <h3>FengShui dla Domu lub mieszkania (powyżej 70 m²)</h3>
-          <a href="#" class="more-link" data-modal-id="dom70plus">więcej</a>
+          <a href="#" class="more-link" data-modal-id="dom">więcej</a>
           <p>Cena: 1299 zł</p>
         </div>
         <button class="add-to-cart">Dodaj do koszyka</button>
