--- a/modals/kalkulatorBazi.html
+++ b/modals/kalkulatorBazi.html
@@ -1,6 +1,6 @@
-<div id="kalkulator" class="modal">
+<div id="kalkulatorBazi" class="modal">
   <div class="modal-content">
-    <span class="close" onclick="closeModal('kalkulator')">&times;</span>
+    <span class="close" onclick="closeModal('kalkulatorBazi')">&times;</span>
     <div class="container">
       <h2>Kalkulator<br />Feng Shui</h2>
       <form onsubmit="event.preventDefault(); calculateFengShuiProfile();">
