--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
           <div class="links-wrapper">
             <a href="#aboutUs">O nas</a>
             <a href="#" onclick="openModal('shop')">Sklep</a>
-            <a href="#" onclick="openModal('kalkulator')">Kalkulator</a>
+            <a href="#" onclick="openModal('kalkulatorBazi')">Bazi</a>
+            <a href="#" onclick="openModal('qiMenModal', event)"
+              >Qi Men Dun Jia</a
+            >
           </div>
         </nav>
         <!-- Ikona hamburgera -->
