--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <a href="#aboutUs">O nas</a>
             <a href="#" onclick="openModal('shop')">Sklep</a>
             <a href="#" onclick="openModal('kalkulatorBazi')">Bazi</a>
-            <a href="#" onclick="openModal('qiMenModal', event)"
+            <!-- <a href="#" onclick="openModal('qiMenModal', event)"
               >Qi Men Dun Jia</a
-            >
+            > -->
           </div>
         </nav>
         <!-- Ikona hamburgera -->
