--- a/modals/shop.html
+++ b/modals/shop.html
@@ -11,7 +11,9 @@
         data-price="899"
       >
         <div class="product-name">
-          <h3>FengShui dla Domu lub mieszkania (do 70 m²)</h3>
+          <h3 class="product-title">
+            FengShui dla Domu lub mieszkania (do 70 m²)
+          </h3>
           <a href="#" class="more-link" data-modal-id="dom">więcej</a>
           <p>Cena: 899 zł</p>
         </div>
@@ -24,7 +26,9 @@
         data-price="1299"
       >
         <div class="product-name">
-          <h3>FengShui dla Domu lub mieszkania (powyżej 70 m²)</h3>
+          <h3 class="product-title">
+            FengShui dla Domu lub mieszkania (powyżej 70 m²)
+          </h3>
           <a href="#" class="more-link" data-modal-id="dom">więcej</a>
           <p>Cena: 1299 zł</p>
         </div>
@@ -38,7 +42,7 @@
         data-price="399"
       >
         <div class="product-name">
-          <h3>Charakterystyka Urodzeniowa BaZi</h3>
+          <h3 class="product-title">Charakterystyka Urodzeniowa BaZi</h3>
           <a href="#" class="more-link" data-modal-id="bazi"> więcej </a>
           <p>Cena: 399 zł</p>
         </div>
@@ -51,7 +55,7 @@
         data-price="499"
       >
         <div class="product-name">
-          <h3>Analiza Qi Men Dun Jia</h3>
+          <h3 class="product-title">Analiza Qi Men Dun Jia</h3>
           <a href="#" class="more-link" data-modal-id="qimen"> więcej </a>
           <p>Cena: 499 zł</p>
         </div>
@@ -64,7 +68,7 @@
         data-price="349"
       >
         <div class="product-name">
-          <h3>Prognoza miesięczna</h3>
+          <h3 class="product-title">Prognoza miesięczna</h3>
           <a href="#" class="more-link" data-modal-id="month"> więcej </a>
           <p>Cena: 349 zł</p>
         </div>
