--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>White Lotus</title>
-    <link rel="stylesheet" href="./css/main.css?v=2" />
+    <link rel="stylesheet" href="./css/main.css?v=3" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -110,12 +110,12 @@
     </div>
     <footer class="custom-footer">
       <div class="custom-footer-content">
-        <div class="footer-left-group">
-          <div class="footer-left">
-            <img src="./images/logo.png" alt="White Lotus Logo" class="logo" />
-          </div>
+        <div class="footer-left">
+          <img src="./images/logo.png" alt="White Lotus Logo" class="logo" />
+        </div>
 
-          <div class="footer-center">
+        <div class="footer-main">
+          <div class="footer-socials">
             <a
               href="https://www.instagram.com/white.lotus_8/"
               target="_blank"
@@ -139,28 +139,29 @@
               />
             </a>
           </div>
-        </div>
-        <div class="footer-right">
-          <form
-            action="mailto:whitelotus.8@yahoo.com"
-            method="post"
-            enctype="text/plain"
-            class="inline-form"
-          >
-            <input
-              type="email"
-              name="email"
-              placeholder="Twój email"
-              required
-            />
-            <input
-              type="text"
-              name="message"
-              placeholder="Wiadomość"
-              required
-            />
-            <button class="form-submit" type="submit">Wyślij</button>
-          </form>
+
+          <div class="footer-form">
+            <form
+              action="mailto:whitelotus.8@yahoo.com"
+              method="post"
+              enctype="text/plain"
+              class="inline-form"
+            >
+              <input
+                type="email"
+                name="email"
+                placeholder="Twój email"
+                required
+              />
+              <input
+                type="text"
+                name="message"
+                placeholder="Wiadomość"
+                required
+              />
+              <button class="form-submit" type="submit">Wyślij</button>
+            </form>
+          </div>
         </div>
       </div>
     </footer>
