--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
           </p>
           <div class="bottom">
             <p class="text-bottom">white</p>
-            <img src="./images/logoChat.png" class="logoAboutUs" />
+            <img src="./images/logo-transparent.png" class="logoAboutUs" />
             <p class="text-bottom">lotus</p>
           </div>
         </div>
@@ -111,7 +111,11 @@
     <footer class="custom-footer">
       <div class="custom-footer-content">
         <div class="footer-left">
-          <img src="./images/logo.png" alt="White Lotus Logo" class="logo" />
+          <img
+            src="./images/napis-footer.jpg"
+            alt="White Lotus Logo"
+            class="logo"
+          />
         </div>
 
         <div class="footer-main">
