--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <!-- <a href="#" onclick="openModal('qiMenModal', event)"
               >Qi Men Dun Jia</a
             > -->
+            <a href="#contact">Kontakt</a>
           </div>
         </nav>
         <!-- Ikona hamburgera -->
@@ -108,7 +109,7 @@
         </div>
       </section>
     </div>
-    <footer class="custom-footer">
+    <footer class="custom-footer" id="contact">
       <div class="custom-footer-content">
         <div class="footer-left">
           <img
