--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
             <a href="#aboutUs">O nas</a>
             <a href="#" onclick="openModal('shop')">Sklep</a>
             <a href="#" onclick="openModal('kalkulatorBazi')">Bazi</a>
-            <a href="#" onclick="openModal('qiMenModal', event)"
+            <!-- <a href="#" onclick="openModal('qiMenModal', event)"
               >Qi Men Dun Jia</a
-            >
+            > -->
             <a href="#contact">Kontakt</a>
           </div>
         </nav>
@@ -178,6 +178,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="scripts/shop.js"></script>
     <script src="scripts/shopDetails.js"></script>
-    <script src="https://www.paypal.com/sdk/js?client-id=AWyR_kp6Yd-Po54TBouUCbzG5gWN1iXFH4h6ZMljMLrh64gCZEnzzoPAm3vvd7d9qa93GjVpHH0JvVye&currency=PLN"></script>
   </body>
 </html>
