--- a/modals/qiMenModal.html
+++ b/modals/qiMenModal.html
@@ -4,7 +4,7 @@
 
     <h2 id="currentDateTime" style="text-align: center; margin-top: 10px"></h2>
 
-    <div id="qiMenGrid" class="qi-men-grid">
+    <div id="qiMenGrid">
       <!-- 9 głównych komórek z pod-komórkami -->
       <!-- Wypełnienie będzie dynamiczne przez qiMen.js -->
     </div>
