--- a/zodiac.html
+++ b/zodiac.html
@@ -22,7 +22,71 @@
   </head>
   <body>
     <header>
-      <div class="custom-header"></div>
+      <div class="custom-header">
+        <nav class="header-links" id="nav-links">
+          <div class="links-wrapper">
+            <a href="./index.html">Wróć</a>
+          </div>
+        </nav>
+        <!-- Ikona hamburgera -->
+        <div class="hamburger" id="hamburger-menu">
+          <div class="bar"></div>
+          <div class="bar"></div>
+          <div class="bar"></div>
+        </div>
+      </div>
     </header>
+    <div class="main-content">
+      <div class="zodiac-grid">
+        <a href="./zodiacHTML/rat.html" class="zodiac-item">
+          <img src="images/zodiacs/rat.jpg" alt="Szczur" />
+          <span>Szczur</span>
+        </a>
+        <a href="ox.html" class="zodiac-item">
+          <img src="images/zodiacs/ox.jpg" alt="Bawół" />
+          <span>Bawół</span>
+        </a>
+        <a href="tiger.html" class="zodiac-item">
+          <img src="images/zodiacs/tiger.jpg" alt="Tygrys" />
+          <span>Tygrys</span></a
+        >
+        <a href="dog.html" class="zodiac-item">
+          <img src="images/zodiacs/dog.jpg" alt="Pies" />
+          <span>Pies</span>
+        </a>
+        <a href="dragon.html" class="zodiac-item">
+          <img src="images/zodiacs/dragon.PNG" alt="Smok" />
+          <span>Smok</span>
+        </a>
+        <a href="goat.html" class="zodiac-item">
+          <img src="images/zodiacs/goat.jpg" alt="Koza" />
+          <span>Koza</span>
+        </a>
+        <a href="monkey.html" class="zodiac-item">
+          <img src="images/zodiacs/monkey.jpg" alt="Małpa" />
+          <span>Małpa</span>
+        </a>
+        <a href="pig.html" class="zodiac-item">
+          <img src="images/zodiacs/pig.jpg" alt="Świnia" />
+          <span>świnia</span>
+        </a>
+        <a href="rabbit.html" class="zodiac-item">
+          <img src="images/zodiacs/tiger.jpg" alt="Królik" />
+          <span>Królik</span>
+        </a>
+        <a href="rooster.html" class="zodiac-item">
+          <img src="images/zodiacs/rooster.jpg" alt="Kogut" />
+          <span>Kogut</span>
+        </a>
+        <a href="snake.html" class="zodiac-item">
+          <img src="images/zodiacs/ox.jpg" alt="Wąż" />
+          <span>Wąż</span>
+        </a>
+        <a href="horse.html" class="zodiac-item">
+          <img src="images/zodiacs/tiger.jpg" alt="Koń" />
+          <span>Koń</span>
+        </a>
+      </div>
+    </div>
   </body>
 </html>
