--- a/zodiac.html
+++ b/zodiac.html
@@ -23,17 +23,11 @@
   <body>
     <header>
       <div class="custom-header">
-        <nav class="header-links" id="nav-links">
+        <nav class="header-zodiac">
           <div class="links-wrapper">
             <a href="./index.html">Wróć</a>
           </div>
         </nav>
-        <!-- Ikona hamburgera -->
-        <div class="hamburger" id="hamburger-menu">
-          <div class="bar"></div>
-          <div class="bar"></div>
-          <div class="bar"></div>
-        </div>
       </div>
     </header>
     <div class="main-content">
