--- a/zodiacHTML/rat.html
+++ b/zodiacHTML/rat.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Szczur – Zodiak Chiński</title>
-    <link rel="stylesheet" href="css/zodiac-detail.css" />
+    <link rel="stylesheet" href="./css/main.css?v=2" />
   </head>
   <body>
-    <a href="zodiac.html">← Wróć</a>
+    <a href="/zodiac.html" class="zodiac-back">← Wróć</a>
     <h1>Szczur</h1>
     <img src="images/szczur.png" alt="Szczur" />
     <p>
