--- a/zodiac.html
+++ b/zodiac.html
@@ -33,7 +33,7 @@
     <div class="main-content">
       <div class="zodiac-grid">
         <a href="./zodiacHTML/rat.html" class="zodiac-item">
-          <img src="images/zodiacs/rat.jpg" alt="Szczur" />
+          <img src="images/zodiacs/rat/rat.jpg" alt="Szczur" />
           <span>Szczur</span>
         </a>
         <a href="ox.html" class="zodiac-item">
