--- a/zodiacHTML/rat.html
+++ b/zodiacHTML/rat.html
@@ -3,15 +3,44 @@
   <head>
     <meta charset="UTF-8" />
     <title>Szczur – Zodiak Chiński</title>
-    <link rel="stylesheet" href="./css/main.css?v=2" />
+    <link rel="stylesheet" href="../css/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <a href="/zodiac.html" class="zodiac-back">← Wróć</a>
-    <h1>Szczur</h1>
-    <img src="images/szczur.png" alt="Szczur" />
-    <p>
-      Szczur to znak osób bystrych, sprytnych i zaradnych. Osoby spod tego znaku
-      są ambitne i pomysłowe.
-    </p>
+    <h1 class="zodiac-title">Szczur</h1>
+    <div class="zodiac-images">
+      <img src="../images/zodiacs/rat/rat.jpg" alt="Szczur 1" />
+      <img src="../images/zodiacs/rat/rat2.jpg" alt="Szczur 2" />
+      <img src="../images/zodiacs/rat/rat3.jpg" alt="Szczur 3" />
+      <img src="../images/zodiacs/rat/rat4.jpg" alt="Szczur 4" />
+    </div>
+
+    <div class="zodiac-description">
+      <p>
+        🐭 Drzewny Szczur – 甲子 Yang Drzewo + Szczur Inteligencja, determinacja
+        i świeży początek 🌱🌀 Osoby urodzone w roku Drzewnego Szczura to
+        inicjatorzy zmian, obdarzeni bystrym umysłem, dużą wyobraźnią i
+        zdolnością dostrzegania tego, co dla innych jest jeszcze niewidoczne. 💡
+        Cechy Drzewnego Szczura: – pomysłowy, elastyczny i analityczny – ma
+        silną potrzebę rozwoju i działania – niezależny w myśleniu, ale potrafi
+        współpracować – potrafi łączyć wizję (Drzewo) z praktycznością i
+        przebiegłością Szczura – dąży do celu cierpliwie, choć nie zawsze wprost
+        🌿 Drzewo Yang daje potrzebę rozwoju, ekspansji i działania z etycznym
+        kompasem. 🐭 Szczur wnosi przebiegłość, zdolności strategiczne i
+        umiejętność dostosowania się. 🌈 Wspierające kolory: – odcienie zieleni
+        (symbol wzrostu) – jasne błękity i niebieskości – ciepłe brązy (dla
+        ugruntowania energii) 🤝 Harmonijne znaki: – Szczur (子) – podwaja siłę
+        planowania i logicznego myślenia – Smok (辰) – wzmacnia odwagę i
+        wizjonerskie pomysły – Małpa (申) – wspiera w działaniu, daje spryt i
+        efektywność – Bawół (丑) – ugruntowuje i pomaga w realizacji celów 🚫
+        Uwaga na: – konflikty z Koniem (午) – może wywoływać napięcia i
+        emocjonalne rozbicie – przeciążenie mentalne – za dużo myślenia, za mało
+        działania ✨ Drzewny Szczur to umysłowy pionier – potrafi wymyślić coś
+        nowego i znaleźć sposób, by to zrealizować. W jego świecie liczy się
+        pomysłowość, rozwój i klarowność kierunku. 📌 Sprawdź, czy w Twoim
+        wykresie pojawia się Szczur lub Drzewo Yang.
+      </p>
+    </div>
   </body>
 </html>
