--- a/zodiac.html
+++ b/zodiac.html
@@ -23,21 +23,19 @@
   <body>
     <header>
       <div class="custom-header">
-        <nav class="header-zodiac">
-          <div class="links-wrapper">
-            <a href="./index.html">Wróć</a>
-          </div>
+        <nav class="back-zodiac">
+          <a href="./index.html">Wróć</a>
         </nav>
       </div>
     </header>
     <div class="main-content">
       <div class="zodiac-grid">
         <a href="./zodiacHTML/rat.html" class="zodiac-item">
-          <img src="images/zodiacs/rat/rat.jpg" alt="Szczur" />
+          <img src="images/zodiacs/logo-ZNAKI CHIŃSKIE (1).png" alt="Szczur" />
           <span>Szczur</span>
         </a>
         <a href="ox.html" class="zodiac-item">
-          <img src="images/zodiacs/ox.jpg" alt="Bawół" />
+          <img src="images/zodiacs/ox-logo.png" alt="Bawół" />
           <span>Bawół</span>
         </a>
         <a href="tiger.html" class="zodiac-item">
@@ -49,7 +47,7 @@
           <span>Pies</span>
         </a>
         <a href="dragon.html" class="zodiac-item">
-          <img src="images/zodiacs/dragon.PNG" alt="Smok" />
+          <img src="images/zodiacs/dragon-logo.png" alt="Smok" />
           <span>Smok</span>
         </a>
         <a href="goat.html" class="zodiac-item">
