--- a/zodiacHTML/rat.html
+++ b/zodiacHTML/rat.html
@@ -7,40 +7,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
-    <a href="/zodiac.html" class="zodiac-back">← Wróć</a>
-    <h1 class="zodiac-title">Szczur</h1>
-    <div class="zodiac-images">
-      <img src="../images/zodiacs/rat/rat.jpg" alt="Szczur 1" />
-      <img src="../images/zodiacs/rat/rat2.jpg" alt="Szczur 2" />
-      <img src="../images/zodiacs/rat/rat3.jpg" alt="Szczur 3" />
-      <img src="../images/zodiacs/rat/rat4.jpg" alt="Szczur 4" />
-    </div>
+    <nav class="back-zodiac">
+      <a href="../zodiac.html">Wróć</a>
+    </nav>
+    <div class="body-rat">
+      <h3 class="zodiac-title">Którym typem szczura jestes?</h3>
+      <table>
+        <tr>
+          <th>Typ znaku</th>
+          <th>Lata urodzenia</th>
+          <th>Charakterystyka</th>
+        </tr>
 
-    <div class="zodiac-description">
-      <p>
-        🐭 Drzewny Szczur – 甲子 Yang Drzewo + Szczur Inteligencja, determinacja
-        i świeży początek 🌱🌀 Osoby urodzone w roku Drzewnego Szczura to
-        inicjatorzy zmian, obdarzeni bystrym umysłem, dużą wyobraźnią i
-        zdolnością dostrzegania tego, co dla innych jest jeszcze niewidoczne. 💡
-        Cechy Drzewnego Szczura: – pomysłowy, elastyczny i analityczny – ma
-        silną potrzebę rozwoju i działania – niezależny w myśleniu, ale potrafi
-        współpracować – potrafi łączyć wizję (Drzewo) z praktycznością i
-        przebiegłością Szczura – dąży do celu cierpliwie, choć nie zawsze wprost
-        🌿 Drzewo Yang daje potrzebę rozwoju, ekspansji i działania z etycznym
-        kompasem. 🐭 Szczur wnosi przebiegłość, zdolności strategiczne i
-        umiejętność dostosowania się. 🌈 Wspierające kolory: – odcienie zieleni
-        (symbol wzrostu) – jasne błękity i niebieskości – ciepłe brązy (dla
-        ugruntowania energii) 🤝 Harmonijne znaki: – Szczur (子) – podwaja siłę
-        planowania i logicznego myślenia – Smok (辰) – wzmacnia odwagę i
-        wizjonerskie pomysły – Małpa (申) – wspiera w działaniu, daje spryt i
-        efektywność – Bawół (丑) – ugruntowuje i pomaga w realizacji celów 🚫
-        Uwaga na: – konflikty z Koniem (午) – może wywoływać napięcia i
-        emocjonalne rozbicie – przeciążenie mentalne – za dużo myślenia, za mało
-        działania ✨ Drzewny Szczur to umysłowy pionier – potrafi wymyślić coś
-        nowego i znaleźć sposób, by to zrealizować. W jego świecie liczy się
-        pomysłowość, rozwój i klarowność kierunku. 📌 Sprawdź, czy w Twoim
-        wykresie pojawia się Szczur lub Drzewo Yang.
-      </p>
+        <!-- PRZYKŁADY -->
+        <tr>
+          <td>
+            <span class="icon wood">🌳</span
+            ><span class="sign-name">Szczur (Drzewo)</span>
+          </td>
+          <td>1924, 1984</td>
+          <td class="char">
+            <span class="positive">zwinny, urokliwy i wytrwały</span>
+            <span class="negative">lękliwy, sprzeczny i nietolerancyjny</span>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <span class="icon fire">🔥</span
+            ><span class="sign-name">Szczur (Ogień)</span>
+          </td>
+          <td>1936, 1996</td>
+          <td class="char">
+            <span class="positive"
+              >uwodzicielski, energiczny i pełen życia</span
+            >
+            <span class="negative">nadambitny, chwiejny i egocentryczny</span>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <span class="icon earth">🌍</span
+            ><span class="sign-name">Szczur (Ziemia)</span>
+          </td>
+          <td>1948, 2008</td>
+          <td class="char">
+            <span class="positive"
+              >intelektualny, dowcipny i dobrze zorganizowany</span
+            >
+            <span class="negative"
+              >bywa nieszczery, przewrażliwiony i niemoralny</span
+            >
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <span class="icon metal">⚙️</span
+            ><span class="sign-name">Szczur (Metal)</span>
+          </td>
+          <td>1960, 2020</td>
+          <td class="char">
+            <span class="positive">skrupulatny, logiczny i dalekowzroczny</span>
+            <span class="negative">bywa narcystyczny, skąpy i plotkarski</span>
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <span class="icon water">💧</span
+            ><span class="sign-name">Szczur (Woda)</span>
+          </td>
+          <td>1972</td>
+          <td class="char">
+            <span class="positive">harmonijny, energetyczny i elastyczny</span>
+            <span class="negative"
+              >niestabilny, nieprzewidywalny i zmienny</span
+            >
+          </td>
+        </tr>
+      </table>
     </div>
   </body>
 </html>
