added pig photo

--- a/zodiac.html
+++ b/zodiac.html
@@ -59,8 +59,8 @@
           <span>Małpa</span>
         </a>
         <a href="pig.html" class="zodiac-item">
-          <img src="images/zodiacs/pig.jpg" alt="Świnia" />
-          <span>świnia</span>
+          <img src="images/zodiacs/pig-logo.png" alt="Świnia" />
+          <span>Świnia</span>
         </a>
         <a href="rabbit.html" class="zodiac-item">
           <img src="images/zodiacs/tiger.jpg" alt="Królik" />
