--- a/zodiac.html
+++ b/zodiac.html
@@ -31,7 +31,7 @@
     <div class="main-content">
       <div class="zodiac-grid">
         <a href="./zodiacHTML/rat.html" class="zodiac-item">
-          <img src="images/zodiacs/logo-ZNAKI CHIŃSKIE (1).png" alt="Szczur" />
+          <img src="" alt="Szczur" />
           <span>Szczur</span>
         </a>
         <a href="ox.html" class="zodiac-item">
@@ -39,11 +39,11 @@
           <span>Bawół</span>
         </a>
         <a href="tiger.html" class="zodiac-item">
-          <img src="images/zodiacs/tiger.jpg" alt="Tygrys" />
+          <img src="images/zodiacs/tiger-logo.png" alt="Tygrys" />
           <span>Tygrys</span></a
         >
         <a href="dog.html" class="zodiac-item">
-          <img src="images/zodiacs/dog.jpg" alt="Pies" />
+          <img src="" alt="Pies" />
           <span>Pies</span>
         </a>
         <a href="dragon.html" class="zodiac-item">
@@ -51,11 +51,11 @@
           <span>Smok</span>
         </a>
         <a href="goat.html" class="zodiac-item">
-          <img src="images/zodiacs/goat.jpg" alt="Koza" />
+          <img src="" alt="Koza" />
           <span>Koza</span>
         </a>
         <a href="monkey.html" class="zodiac-item">
-          <img src="images/zodiacs/monkey.jpg" alt="Małpa" />
+          <img src="" alt="Małpa" />
           <span>Małpa</span>
         </a>
         <a href="pig.html" class="zodiac-item">
@@ -63,19 +63,19 @@
           <span>Świnia</span>
         </a>
         <a href="rabbit.html" class="zodiac-item">
-          <img src="images/zodiacs/tiger.jpg" alt="Królik" />
+          <img src="images/zodiacs/rabbit-logo.png" alt="Królik" />
           <span>Królik</span>
         </a>
         <a href="rooster.html" class="zodiac-item">
-          <img src="images/zodiacs/rooster.jpg" alt="Kogut" />
+          <img src="" alt="Kogut" />
           <span>Kogut</span>
         </a>
         <a href="snake.html" class="zodiac-item">
-          <img src="images/zodiacs/ox.jpg" alt="Wąż" />
+          <img src="images/zodiacs/snake-logo.png" alt="Wąż" />
           <span>Wąż</span>
         </a>
         <a href="horse.html" class="zodiac-item">
-          <img src="images/zodiacs/tiger.jpg" alt="Koń" />
+          <img src="" alt="Koń" />
           <span>Koń</span>
         </a>
       </div>
