--- a/zodiac.html
+++ b/zodiac.html
@@ -31,7 +31,7 @@
     <div class="main-content">
       <div class="zodiac-grid">
         <a href="./zodiacHTML/rat.html" class="zodiac-item">
-          <img src="" alt="Szczur" />
+          <img src="images/zodiacs/rat-logo.png" alt="Szczur" />
           <span>Szczur</span>
         </a>
         <a href="ox.html" class="zodiac-item">
@@ -43,7 +43,7 @@
           <span>Tygrys</span></a
         >
         <a href="dog.html" class="zodiac-item">
-          <img src="" alt="Pies" />
+          <img src="images/zodiacs/dog-logo.png" alt="Pies" />
           <span>Pies</span>
         </a>
         <a href="dragon.html" class="zodiac-item">
@@ -51,11 +51,11 @@
           <span>Smok</span>
         </a>
         <a href="goat.html" class="zodiac-item">
-          <img src="" alt="Koza" />
+          <img src="images/zodiacs/goat-logo.png" alt="Koza" />
           <span>Koza</span>
         </a>
         <a href="monkey.html" class="zodiac-item">
-          <img src="" alt="Małpa" />
+          <img src="images/zodiacs/mokey-logo.png" alt="Małpa" />
           <span>Małpa</span>
         </a>
         <a href="pig.html" class="zodiac-item">
@@ -67,7 +67,7 @@
           <span>Królik</span>
         </a>
         <a href="rooster.html" class="zodiac-item">
-          <img src="" alt="Kogut" />
+          <img src="images/zodiacs/rooster-logo.png" alt="Kogut" />
           <span>Kogut</span>
         </a>
         <a href="snake.html" class="zodiac-item">
@@ -75,7 +75,7 @@
           <span>Wąż</span>
         </a>
         <a href="horse.html" class="zodiac-item">
-          <img src="" alt="Koń" />
+          <img src="images/zodiacs/horse-logo.png" alt="Koń" />
           <span>Koń</span>
         </a>
       </div>
