added html to zodiacs

--- a/zodiac.html
+++ b/zodiac.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <head>
-      <meta charset="UTF-8" />
-      <link
-        rel="shortcut icon"
-        href="./images/grafika.png"
-        type="image/png"
-        sizes="45x45"
-      />
-      <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>White Lotus</title>
-      <link rel="stylesheet" href="./css/main.css?v=2" />
-      <link rel="preconnect" href="https://fonts.googleapis.com" />
-      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-      <link
-        href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&family=Lustria&family=Cinzel&display=swap"
-        rel="stylesheet"
-      />
-    </head>
+    <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      href="./images/grafika.png"
+      type="image/png"
+      sizes="45x45"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>White Lotus</title>
+    <link rel="stylesheet" href="./css/main.css?v=2" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&family=Lustria&family=Cinzel&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -30,51 +28,51 @@
     </header>
     <div class="main-content">
       <div class="zodiac-grid">
-        <a href="./zodiacHTML/rat.html" class="zodiac-item">
+        <a href="zodiacHTML/rat.html" class="zodiac-item">
           <img src="images/zodiacs/rat-logo.png" alt="Szczur" />
           <span>Szczur</span>
         </a>
-        <a href="ox.html" class="zodiac-item">
+        <a href="zodiacHTML/ox.html" class="zodiac-item">
           <img src="images/zodiacs/ox-logo.png" alt="Bawół" />
           <span>Bawół</span>
         </a>
-        <a href="tiger.html" class="zodiac-item">
+        <a href="zodiacHTML/tiger.html" class="zodiac-item">
           <img src="images/zodiacs/tiger-logo.png" alt="Tygrys" />
           <span>Tygrys</span></a
         >
-        <a href="dog.html" class="zodiac-item">
+        <a href="zodiacHTML/dog.html" class="zodiac-item">
           <img src="images/zodiacs/dog-logo.png" alt="Pies" />
           <span>Pies</span>
         </a>
-        <a href="dragon.html" class="zodiac-item">
+        <a href="zodiacHTML/dragon.html" class="zodiac-item">
           <img src="images/zodiacs/dragon-logo.png" alt="Smok" />
           <span>Smok</span>
         </a>
-        <a href="goat.html" class="zodiac-item">
+        <a href="zodiacHTML/goat.html" class="zodiac-item">
           <img src="images/zodiacs/goat-logo.png" alt="Koza" />
           <span>Koza</span>
         </a>
-        <a href="monkey.html" class="zodiac-item">
+        <a href="zodiacHTML/monkey.html" class="zodiac-item">
           <img src="images/zodiacs/mokey-logo.png" alt="Małpa" />
           <span>Małpa</span>
         </a>
-        <a href="pig.html" class="zodiac-item">
+        <a href="zodiacHTML/pig.html" class="zodiac-item">
           <img src="images/zodiacs/pig-logo.png" alt="Świnia" />
           <span>Świnia</span>
         </a>
-        <a href="rabbit.html" class="zodiac-item">
+        <a href="zodiacHTML/rabbit.html" class="zodiac-item">
           <img src="images/zodiacs/rabbit-logo.png" alt="Królik" />
           <span>Królik</span>
         </a>
-        <a href="rooster.html" class="zodiac-item">
+        <a href="zodiacHTML/rooster.html" class="zodiac-item">
           <img src="images/zodiacs/rooster-logo.png" alt="Kogut" />
           <span>Kogut</span>
         </a>
-        <a href="snake.html" class="zodiac-item">
+        <a href="zodiacHTML/snake.html" class="zodiac-item">
           <img src="images/zodiacs/snake-logo.png" alt="Wąż" />
           <span>Wąż</span>
         </a>
-        <a href="horse.html" class="zodiac-item">
+        <a href="zodiacHTML/horse.html" class="zodiac-item">
           <img src="images/zodiacs/horse-logo.png" alt="Koń" />
           <span>Koń</span>
         </a>
