--- a/zodiacHTML/rat.html
+++ b/zodiacHTML/rat.html
@@ -2,15 +2,27 @@
 <html lang="pl">
   <head>
     <meta charset="UTF-8" />
-    <title>Szczur – Zodiak Chiński</title>
+    <link
+      rel="shortcut icon"
+      href="./images/grafika.png"
+      type="image/png"
+      sizes="45x45"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>White Lotus</title>
     <link rel="stylesheet" href="../css/main.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Quicksand:wght@400;600;700&family=Lustria&family=Cinzel&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <nav class="back-zodiac">
       <a href="../zodiac.html">Wróć</a>
     </nav>
-    <div class="body-rat">
+    <div class="body-zodiac" data-sign="rat">
       <h3 class="zodiac-title">Którym typem szczura jestes?</h3>
       <table>
         <tr>
@@ -18,8 +30,6 @@
           <th>Lata urodzenia</th>
           <th>Charakterystyka</th>
         </tr>
-
-        <!-- PRZYKŁADY -->
         <tr>
           <td>
             <span class="icon wood">🌳</span
